--- a/recipes/dysgu/meta.yaml
+++ b/recipes/dysgu/meta.yaml
@@ -11,7 +11,7 @@ source:
   sha256: {{ sha256hash }}
 
 build:
-  number: 0
+  number: 1
   binary_relocation: False
   entry_points:
     - dysgu = dysgu.main:cli
@@ -27,10 +27,10 @@ requirements:
     - python
     - cython
     - htslib >=1.12
-    - numpy >=1.18
+    - numpy <2
     - lightgbm
     - zlib
-    - pysam >=0.19
+    - pysam >=0.22
     - libcurl
     - openssl
     - bzip2
@@ -45,7 +45,7 @@ requirements:
     - click >=8.0
   run:
     - python
-    - numpy >=1.18
+    - numpy <2
     - scipy >1.7
     - pandas >=1.2
     - networkx >=2.4
